--- a/geomelody/geomelody/SongCell.xib
+++ b/geomelody/geomelody/SongCell.xib
@@ -39,8 +39,9 @@
 					<object class="IBUILabel" id="737727301">
 						<reference key="NSNextResponder" ref="653987869"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{72, 5}, {152, 21}}</string>
+						<string key="NSFrame">{{108, 6}, {201, 21}}</string>
 						<reference key="NSSuperview" ref="653987869"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="518002529"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -70,8 +71,9 @@
 					<object class="IBUILabel" id="518002529">
 						<reference key="NSNextResponder" ref="653987869"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{73, 26}, {152, 21}}</string>
+						<string key="NSFrame">{{108, 28}, {201, 21}}</string>
 						<reference key="NSSuperview" ref="653987869"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="631132510"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -97,8 +99,9 @@
 					<object class="IBUILabel" id="567944333">
 						<reference key="NSNextResponder" ref="653987869"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{92, 44}, {42, 21}}</string>
+						<string key="NSFrame">{{127, 46}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="653987869"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -127,8 +130,9 @@
 					<object class="IBUIImageView" id="580246965">
 						<reference key="NSNextResponder" ref="653987869"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{65, 67}</string>
+						<string key="NSFrameSize">{100, 100}</string>
 						<reference key="NSSuperview" ref="653987869"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="737727301"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -137,8 +141,9 @@
 					<object class="IBUIImageView" id="631132510">
 						<reference key="NSNextResponder" ref="653987869"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{73, 47}, {16, 16}}</string>
+						<string key="NSFrame">{{108, 49}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="653987869"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="567944333"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -148,23 +153,10 @@
 							<string key="NSResourceName">likes.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="878008169">
-						<reference key="NSNextResponder" ref="653987869"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{277, 13}, {38, 41}}</string>
-						<reference key="NSSuperview" ref="653987869"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<int key="IBUIContentMode">1</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">DisclosureIndicator@2x.png</string>
-						</object>
-					</object>
 				</array>
-				<string key="NSFrameSize">{320, 67}</string>
+				<string key="NSFrameSize">{329, 100}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="580246965"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -237,11 +229,10 @@
 						<reference key="object" ref="653987869"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="737727301"/>
-							<reference ref="518002529"/>
 							<reference ref="567944333"/>
-							<reference ref="580246965"/>
 							<reference ref="631132510"/>
-							<reference ref="878008169"/>
+							<reference ref="518002529"/>
+							<reference ref="580246965"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -274,11 +265,6 @@
 						<reference key="object" ref="631132510"/>
 						<reference key="parent" ref="653987869"/>
 					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">143</int>
-						<reference key="object" ref="878008169"/>
-						<reference key="parent" ref="653987869"/>
-					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -287,12 +273,6 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="142.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="143.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<object class="NSMutableAttributedString" key="143.notes">
-					<object class="NSMutableString" key="NSString">
-						<characters key="NS.bytes"/>
-					</object>
-				</object>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">SongCell</string>
@@ -305,15 +285,50 @@
 			<nil key="sourceID"/>
 			<int key="maxID">143</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">SongCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="likes">UILabel</string>
+						<string key="songImage">UIImageView</string>
+						<string key="songInterpreter">UILabel</string>
+						<string key="songTitle">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="likes">
+							<string key="name">likes</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songImage">
+							<string key="name">songImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songInterpreter">
+							<string key="name">songInterpreter</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songTitle">
+							<string key="name">songTitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SongCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="DisclosureIndicator@2x.png">{20, 26}</string>
-			<string key="likes.png">{457, 389}</string>
-		</dictionary>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">likes.png</string>
+			<string key="NS.object.0">{457, 389}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
